--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply font-lato;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  @apply font-raleway;
+}
