--- a/src/components/LanguageHandler/styles.css
+++ b/src/components/LanguageHandler/styles.css
@@ -1,5 +1,5 @@
 .language-button {
-  @apply border-gray-600 border-2 px-2;
+  @apply border-2 border-gray-600 px-2;
 }
 
 .language-button.selected {
